welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: not found: type Bool
	var ok: Bool = false;
                ^